fixed transitions and scrollbars

--- a/src/base.css
+++ b/src/base.css
@@ -111,8 +111,8 @@
   transform: translateX(0);
   transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
-.back-to-top.slide-out,
-.fa-angle-up.slide-out {
+.back-to-top.slide-in,
+.fa-angle-up.slide-in {
   transform: translateX(100%);
   opacity: 0;
 }
@@ -139,12 +139,14 @@
 
 /* Copyright animation */
 .copyright {
-  transform: translateY(100%);
-  transition: transform 0.7s ease;
-}
-.copyright.slide-up {
   transform: translateY(0);
+  transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
+.copyright.slide-out {
+  transform: translateY(100%);
+  opacity: 0;
+}
+
 
 /* Contact form */
 .input {
